2013-02-20  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Enable large file support, in particular to enable
	working with 64-bit inode numbers.

2012-09-22  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.111.

	* NEWS: Update.
	* po/*: Update.

2012-08-21  Miloslav Trmač  <mitr@redhat.com>

	* userpasswd.c: Add missing includes.

	* configure.ac: Release 1.110.
	* NEWS: Update.
	* po/*: Update.

	* sample/README: New file.
	* sample/shutdown: Move from ...
	* shutdown: ... here.
	* sample/wrapped.console: Move from ...
	* wrapped.console: ... here.
	* sample/wrapped.pamd: Move from ...
	* shutdown.pamd: ... here.
	* Makefile.am (EXTRA_DIST): Ship contents of the "sample" subdirectory,
	remove PAM and userhelper configuration from the main one.
	(dist_bin_SCRIPTS): Remove, the script is now in the "sample"
	subdirectory.
	(consoleappdir, WRAPPED_APPS, consoleapp_DATA): Remove, the
	configuration is now in the "sample" subdirectory.
	(DISTCLEANFILES): Remove no longer generated configuration files.

2012-08-20  Miloslav Trmač  <mitr@redhat.com>

	* usermount.c (main): Reject running (userformat) without arguments
	instead of treating it like (usermount).
	* usermount.1: Clarify that the "device" argument to (userformat) is
	required.

	* userinfo.c (parse_args): Don't output an additional error message
	when getopt() has already provided a more precise one.

	* userhelper.c (main)
	* userinfo.c (parse_args)
	* userpasswd.c (main): Terminate if unexpected command-line arguments
	are received.
	* po/POTFILES.in: Add userpasswd.c.

2012-03-03  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.109.
	* NEWS: Update.
	* po/*: Update.

2011-11-21  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (construct_cmdline): Don't end the command line with a
	space when no arguments are used.

	* gsmclient.h (gsm_client_get_id)
	* gsmclient.c (gsm_client_get_id): Replace deprecated G_CONST_RETURN
	by explicit `const'.
